added gemlock to gitignore

--- a/_includes/homeheader.html
+++ b/_includes/homeheader.html
@@ -2,8 +2,8 @@
 
 <section class="page-header">
   <div class="page-header-content">
-    <h1 class="project-name">openrampette</h1>
-    <h2 class="project-tagline">this is the repo for the openrampette project</h2>
+    <h1 class="project-name">{{ site.title }}</h1>
+    <h2 class="project-tagline">{{ site.tagline }}</h2>
     <a href="https://github.com/opencarecc/openrampette" class="btn">View on GitHub</a>
     <a href="https://github.com/opencarecc/openrampette/zipball/master" class="btn">Download .zip</a>
     <a href="https://github.com/opencarecc/openrampette/wiki" class="btn">Build your own!</a>
