move home-header static fields to variables

--- a/_includes/homeheader.html
+++ b/_includes/homeheader.html
@@ -4,8 +4,10 @@
   <div class="page-header-content">
     <h1 class="project-name">{{ site.title }}</h1>
     <h2 class="project-tagline">{{ site.tagline }}</h2>
-    <a href="https://github.com/opencarecc/openrampette" class="btn">View on GitHub</a>
-    <a href="https://github.com/opencarecc/openrampette/zipball/master" class="btn">Download .zip</a>
-    <a href="https://github.com/opencarecc/openrampette/wiki" class="btn">Build your own!</a>
+
+    {% for item in site.buttons %}
+      <a href="{{ item.link }} " class="btn">{{ item.text }} </a>
+    {% endfor %}
+
   </div>
 </section>
