--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,13 +1,29 @@
 <div class="column">
     <h2>Latest news about the project</h2>
-    <ul>
+    <div class="row">
       {% for post in site.posts offset: 0 limit: 3 %}
-        <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+
+        <!-- <li>
+          <span>{{ post.date | date_to_string }}</span> » <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+        </li> -->
+
+
+        <div class="column tutorials">
+          <a href="{{ site.baseurl }}{{ post.url }}">
+            <img src="{{ post.image }}">
+          </a>
+          <h3>{{ post.title }}</h3>
+          <p>This is a brief description of Tutorial 3</p>
+        </div>
+
+
       {% endfor %}
-    </ul>
+    </div>
+
     <p>
       <a href="{{ site.baseurl }}/blog">
         <em>See more »</em>
       </a>
     </p>
+
 </div>
