fixed navbar link to openrampette and baseurl

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,11 @@
 <nav>
-  <a href="http://opencare.cc">
+  <a href="{{ site.baseurl }}">
     <img src="{{ site.baseurl }}/assets/OC-Logo-colortext.svg">
-  </a>  
+  </a>
 	<ul>
-    <li><a href="{{ site.baseurl }}/">Home</a></li>
     <li><a href="{{ site.baseurl }}/about">About</a></li>
     <li><a href="{{ site.baseurl }}/blog">News</a></li>
+    <li><a href="opencare.cc">opencare.cc</a></li>
+
   </ul>
 </nav>
