fixed logo-link not pointing to home

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="{{ site.baseurl }}">
+  <a href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/assets/OC-Logo-colortext.svg">
   </a>
 	<ul>
