added first two posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,10 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
+
+<img src="{{ page.image }}">
+
+
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <p class="category">filed under:
