--- a/_includes/news.html
+++ b/_includes/news.html
@@ -7,15 +7,13 @@
           <span>{{ post.date | date_to_string }}</span> » <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
         </li> -->
 
-
         <div class="column tutorials">
           <a href="{{ site.baseurl }}{{ post.url }}">
             <img src="{{ post.image }}">
           </a>
           <h3>{{ post.title }}</h3>
-          <p>This is a brief description of Tutorial 3</p>
+          <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}">read more</a></p>
         </div>
-
 
       {% endfor %}
     </div>
