removed open script tag with no closing

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -15,4 +15,4 @@
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 <div id="disqus_thread"></div>
-<script>
+<!-- <script> -->
