--- a/_includes/slick_slider.html
+++ b/_includes/slick_slider.html
@@ -1,8 +1,9 @@
 <div class="column">
   <div class="img_slider">
-    <img src="https://c2.staticflickr.com/8/7255/26849084025_5ca9ba8b9d_z.jpg">
-    <img src="https://c2.staticflickr.com/8/7259/26781593981_aca6939443_z.jpg">
-    <img src="https://c2.staticflickr.com/8/7560/26243608944_31687dd734_z.jpg">
+    <img src="https://farm5.staticflickr.com/4211/34767438573_c6c73445d7_z_d.jpg">
+    <img src="https://farm5.staticflickr.com/4217/35189199200_654c462308_z_d.jpg">
+    <img src="{{ site.baseurl }}/assets/images/usertest_chiamata.jpg">
+    <img src="{{ site.baseurl }}/assets/images/flier.jpg">
   </div>
-  <p>this is a brief description text of the pics in the slideshow up here etc etc</p>
+  <!-- <p>Research design prototyping and testing.</p> -->
 </div>
