--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -1,21 +1,21 @@
 <!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
-<div class="column tutorials">
+<div class="column topics">
   <a href="http://www.google.com">
-    <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg">
+    <img src="{{ site.baseurl }}/assets/images/device-custom.png">
   </a>
   <h3>La chiamata</h3>
   <p>Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
 </div>
-<div class="column tutorials">
+<div class="column topics">
   <a href="http://www.google.com">
-    <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg">
+    <img src="{{ site.baseurl }}/assets/images/procedura.gif">
   </a>
   <h3>La procedura</h3>
   <p>Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
 </div>
-<div class="column tutorials">
+<div class="column topics">
   <a href="http://www.google.com">
-    <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg">
+    <img src="{{ site.baseurl }}/assets/images/sticker.png">
   </a>
   <h3>La visibilità</h3>
   <p>Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
