finalized single projects template

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,12 +1,12 @@
 <div class="column">
     <h2>Latest news about the project</h2>
+
+    <!-- {{ include.category }} -->
+
     <div class="row">
-      {% for post in site.posts offset: 0 limit: 3 %}
-
-        <!-- <li>
-          <span>{{ post.date | date_to_string }}</span> » <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
-        </li> -->
-
+      <!--if a category is specified print just the news reguarding that-->
+      {% if include.category %}
+        {% for post in site.categories[include.category] offset: 0 limit: 3 %}
         <div class="column tutorials">
           <a href="{{ site.baseurl }}{{ post.url }}">
             <img src="{{ post.image }}">
@@ -14,8 +14,25 @@
           <h3>{{ post.title }}</h3>
           <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}">read more</a></p>
         </div>
+        {% endfor %}
 
-      {% endfor %}
+
+      {% else %}
+        {% for post in site.posts offset: 0 limit: 3 %}
+          <!-- <li>
+            <span>{{ post.date | date_to_string }}</span> » <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+          </li> -->
+
+          <div class="column tutorials">
+            <a href="{{ site.baseurl }}{{ post.url }}">
+              <img src="{{ post.image }}">
+            </a>
+            <h3>{{ post.title }}</h3>
+            <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}">read more</a></p>
+          </div>
+        {% endfor %}
+
+        {% endif %}
     </div>
 
     <p>
