--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -1,23 +1,22 @@
 <!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
 <div class="column topics">
-  <a href="http://www.google.com">
+  <a href="{{ site.baseurl }}/pages/chiamata">
     <img src="{{ site.baseurl }}/assets/images/device-custom.png">
   </a>
   <h3>La chiamata</h3>
   <p>Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
 </div>
 <div class="column topics">
-  <a href="http://www.google.com">
-    <img src="{{ site.baseurl }}/assets/images/procedura.gif">
+  <a href="{{ site.baseurl }}/pages/procedura">
+    <img src="{{ site.baseurl }}/assets/images/procedura.png">
   </a>
   <h3>La procedura</h3>
   <p>Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
 </div>
 <div class="column topics">
-  <a href="http://www.google.com">
+  <a href="{{ site.baseurl }}/pages/comunicazione">
     <img src="{{ site.baseurl }}/assets/images/sticker.png">
   </a>
-  <h3>La visibilità</h3>
+  <h3>La comunicazione</h3>
   <p>Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
 </div>
-<span style="width:100%;text-align:center;margin-top:1rem;"><a href=""><em>Check all the tutorials »</em></a></span>
