added site name in navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,9 @@
 <nav>
   <a href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/assets/OC-Logo-colortext.svg">
+    <h1 class="site-name">
+      {{site.name}}
+    </h1>
   </a>
 	<ul>
     <li><a href="{{ site.baseurl }}/about">About</a></li>
