update content in license section

--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,5 +1,12 @@
-<div class="column">
+<!-- <div class="column">
   <h2>Open Source Hardware</h2>
   <img src="http://opencare.cc/assets/OC-Ohw-logo.svg">
   <p>This is some text about the license</p>
+</div> -->
+<div class="column">
+  <h2>Open Source</h2>
+  <!-- <img src="{{ site.baseurl }}/assets/OC-OpenSource-logo.svg"> -->
+  <p>Software - <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License</a></p>
+  <!-- <img src="{{ site.baseurl }}/assets/OC-Ohw-logo.svg"> -->
+  <p>Hardware - <a href="http://ohwr.org/cernohl" target="_blank">CERN OHL v.1.2</a></p>
 </div>
