refact video section

--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,4 +1,10 @@
 <div class="column video">
-  <div class='embed-container'><iframe src='https://www.youtube.com/embed/z6lobpiFeiU' frameborder='0' allowfullscreen></iframe></div>
-  <p>this is a brief description text for the video content etc etc</p>
+  <div class='embed-container'><iframe src='https://www.youtube.com/embed/bARoyq8Tnto' frameborder='0' allowfullscreen></iframe></div>
+  <h1> Cos'è openrampette?</h1>
+  <p class="short-about">
+    openrampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href="http://opencare.cc" target="_blank">opencare</a>.
+  </p>
+  <p>
+    <a class="more" href="{{ site.baseurl }}/about"><em>Scopri di più &raquo;</em></a>
+  </p>
 </div>
