--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -63,9 +63,10 @@ nav img {
 }
 
 /*the site name in the navbar*/
-h1.site-name {
+/*h1.site-name {
     max-width: 100px;
     font-size: 23px;
+    font-size: 1rem;
     text-align: left;
     color: gray;
     margin-left: 73px;
@@ -74,6 +75,18 @@ h1.site-name {
     position: absolute;
     font-weight: 300;
     line-height: 30px;
+}*/
+nav h1 {
+  max-width: 1rem;
+  font-size: 1.45rem;
+  text-align: left;
+  color: #159957;
+  margin-left: 4.7rem;
+  margin-top: -2px;
+  padding: 0px;
+  position: absolute;
+  font-weight: 300;
+  line-height: 1.7rem;
 }
 
 /* NAVIGATION BAR media queries */
@@ -100,6 +113,11 @@ h1.site-name {
   nav img {
     max-width: 2.6rem;
   }
+  nav h1 {
+    font-size: 1.15rem;
+    margin-left: 4.1rem;
+    line-height: 1.4rem;
+  }
 }
 
 @media screen and (max-width: 42em) {
@@ -111,6 +129,11 @@ h1.site-name {
   }
   nav img {
     max-width: 2.2rem;
+  }
+  nav h1 {
+    font-size: 1rem;
+    margin-left: 3.2rem;
+    line-height: 1.2rem;
   }
 }
 
