--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -279,6 +279,7 @@ nav h1 {
   background-color: rgba(255,255,255,.35);
   border: 1px solid rgb(41,160,209);
   font-weight: 300;
+  text-align: center;
   border-radius: 0.3rem;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s;
 }
@@ -598,7 +599,7 @@ a:last-of-type.btn:hover {
   padding-bottom: 56.25%!important;
   height: 0;
   overflow: hidden;
-  max-width: 100%;
+  max-width: 100%!important;
 }
 
 .embed-container iframe,
@@ -609,6 +610,28 @@ a:last-of-type.btn:hover {
   left: 0;
   width: 100%;
   height: 100%;
+  max-width: 100%!important;
+  max-height: 600px!important;
+}
+
+iframe, object, embed {
+  /*width: 100%;*/
+  /*height: 100%;*/
+  max-width: 100%!important;
+  max-height: 600px!important;
+}
+
+@media screen and (max-width: 42em) {
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    max-width: 100%!important;
+    max-height: 400px!important;
+  }
+  iframe, object, embed {
+    max-width: 100%!important;
+    max-height: 300px!important;
+  }
 }
 
 
