--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -355,7 +355,7 @@ a:last-of-type.btn:hover {
   color: #159957; }
 .main-content p {
   margin-bottom: 1em;
-  /*flex-basis: 100%; }*/
+  /*flex-basis: 100%;*/ }
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
