--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -355,7 +355,7 @@ a:last-of-type.btn:hover {
   color: #159957; }
 .main-content p {
   margin-bottom: 1em;
-  /*flex-basis: 100%;*/ }
+  flex-basis: 100%; }
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
@@ -467,6 +467,9 @@ a:last-of-type.btn:hover {
     padding: 2rem 1rem;
     font-size: 1rem;
   }
+  .main-content p {
+  margin-bottom: 1em;
+  flex-basis: auto; }
   .main-content ul {
     padding-left: 20px;
   }
