--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -618,15 +618,13 @@ a:last-of-type.btn:hover {
   max-height: 700px!important;
 }
 
-iframe, object, embed {
-  /*width: 100%;*/
-  /*height: 100%;*/
+/*iframe, object, embed {
   max-width: 100%!important;
   max-height: 700px!important;
   margin: 0 auto;
   display: block;
   flex-basis: 100%;
-}
+}*/
 
 @media screen and (max-width: 42em) {
   .embed-container iframe,
@@ -635,10 +633,10 @@ iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
   }
-  iframe, object, embed {
+  /*iframe, object, embed {
     max-width: 100%!important;
-    /*max-height: 300px!important;*/
-  }
+    max-height: 300px!important;
+  }*/
 }
 
 
