--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -620,7 +620,7 @@ a:last-of-type.btn:hover {
 
 iframe, object, embed {
   max-width: 100%!important;
-  height: 700px!important;
+  max-height: 700px!important;
   margin: 0 auto;
   display: block;
   flex-basis: 100%;
@@ -633,10 +633,10 @@ iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
   }
-  /*iframe, object, embed {
+  iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
-  }*/
+  }
 }
 
 
