test new navigation

--- a/_layouts/projectPage.html
+++ b/_layouts/projectPage.html
@@ -6,7 +6,8 @@
 
 <body>
   <!--navigation-->
-  {% include navbar.html %}
+  <!-- {% include navbar.html %} -->
+  {% include navigation.html %}
 
   <!--main contents-->
   <section class="main-content">
