--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,8 @@
   {% include head.html %}
 
   <body>
-    {% include navbar.html %}
+    <!-- {% include navbar.html %} -->
+    {% include navigation.html %}
 
     <section class="main-content">
       {{ content }}
