add new navigation bar with highlight

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
   
   <body>
 
-    {% include navbar.html %}
+    <!-- {% include navbar.html %} -->
+  {% include navigation.html %}
     
     <section class="main-content">
     
