--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,4 @@
-<!-- Belongs at: /_includes/navigation.html -->
-
 <!-- This finds the current page so it can be highlighted. -->
-
 {% for entry in site.data.navigation %}
 {% capture fullurl %}{{ site.baseurl }}{{ entry.url }}{% endcapture %}
     {% if fullurl == page.url %}
@@ -14,26 +11,32 @@
 
 <!-- Then we build the nav bar. -->
 <nav>
+  <a href="{{ site.baseurl }}/">
+    <img src="{{ site.baseurl }}/assets/OC-Logo-colortext.svg">
+    <h1 class="site-name">
+      {{site.name}}
+    </h1>
+  </a>
     <ul>
     {% for entry in site.data.navigation %}
         {% if entry.url == current_page %}
-            {% assign current = ' class="current"' %}
+            {% assign current = 'current' %}
         {% else %}
             <!-- We have to declare it 'null' to ensure it doesn't propagate. -->
             {% assign current = null %}
         {% endif %}
         {% assign sublinks = entry.sublinks %}
         {% if sublinks %}
-        <li>
-            <a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a>
-            <ul>
+        <li class="dropdown {{ current }}">
+            <!-- <a href="{{ site.baseurl }}{{ entry.url }}"> -->{{ entry.title }}<!-- </a> -->
+            <ul class="dropdown-content">
                 {% for sublink in sublinks %}
-                <li{{ current }}><a href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a></li>
+                <li><a href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a></li>
                 {% endfor %}
             </ul>
         </li>
         {% else %}
-        <li{{ current }}><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
+        <li class="{{ current }}"><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
         {% endif %}
     {% endfor %}
     </ul>
