--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -46,12 +46,15 @@ nav ul {
   width: initial;
 }
 
-nav li {
+nav li,
+nav li.dropdown {
   display: inline-block;
   margin-left: 1rem;
   text-transform: uppercase;
   font-weight: 300;
   font-size: .9rem;
+  color: #000099;
+  cursor: pointer;
 }
 
 nav li a {
@@ -66,6 +69,52 @@ nav img {
 nav .current {
   border-bottom: 1px solid #602480;
 }
+
+nav .current a,
+nav .current a:hover,
+nav .current a:active  {
+  border: none;
+}
+
+nav .dropdown::after {
+  content: "";
+  display: inline-block;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid #000099;
+  margin: 2px 0px 2px 2px;
+}
+
+nav .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+nav .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px 12px 4px;
+  z-index: 1;
+  text-align: left;
+  /*line-height: 2rem;*/
+}
+
+nav .dropdown-content li {
+  padding: .5rem 0; 
+}
+
+nav .dropdown-content li a,
+nav .current .dropdown-content li a {
+  border-bottom: 1px solid #f9f9f9;
+}
+
+nav .dropdown-content li a:hover,
+nav .current .dropdown-content li a:hover {
+  border-bottom-color: #602480;
+}
+
 
 /*the site name in the navbar*/
 /*h1.site-name {
