--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -118,6 +118,9 @@ nav .current .dropdown-content li a:hover {
   border-bottom: 1px solid #000099;
 }
 
+.nav-trigger {
+  display: none;
+}
 
 /*the site name in the navbar*/
 /*h1.site-name {
@@ -180,9 +183,44 @@ nav h1 {
 @media screen and (max-width: 42em) {
   nav {
     padding: 1.2rem 1rem;
+    overflow-x: hidden;
+    max-width: 100%;
   }
   nav ul {
-    padding-top: .5rem;
+    margin-top: 5rem;
+    padding: 1.2rem;
+    /*padding-right: 1.2rem;*/
+    /*display: none;*/
+    /*z-index: -1;*/
+    /*background-color: blue;*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    float: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.2s, opacity 0.2s linear;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+3,0.95+57,0.3+79,0.1+99 */
+background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3%, rgba(255,255,255,0.95) 57%, rgba(255,255,255,0.3) 79%, rgba(255,255,255,0.1) 99%, rgba(255,255,255,0.1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 3%,rgba(255,255,255,0.95) 57%,rgba(255,255,255,0.3) 79%,rgba(255,255,255,0.1) 99%,rgba(255,255,255,0.1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 3%,rgba(255,255,255,0.95) 57%,rgba(255,255,255,0.3) 79%,rgba(255,255,255,0.1) 99%,rgba(255,255,255,0.1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#1affffff',GradientType=0 ); /* IE6-9 */
+-webkit-box-shadow: inset 0px 10px 5px -8px rgba(0,0,0,0.1);
+-moz-box-shadow: inset 0px 10px 5px -8px rgba(0,0,0,0.1);
+box-shadow: inset 0px 10px 5px -8px rgba(0,0,0,0.1);
+z-index: 999;
+/*display: -webkit-flex;
+display: flex;
+-webkit-flex-direction: column;
+flex-direction: column;*/
+  }
+  nav ul li,
+  nav ul li .dropdown {
+    display: block;
+    margin: 1rem auto;
   }
   nav img {
     max-width: 2.2rem;
@@ -191,6 +229,50 @@ nav h1 {
     font-size: 1rem;
     margin-left: 3.2rem;
     line-height: 1.2rem;
+  }
+
+
+  .nav-trigger {
+    display: block;
+    /* critical styles - hide the checkbox input */
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+  }
+  label[for="nav-trigger"] {
+    /* critical positioning styles */
+    position: absolute;
+    /*right: 15px; top: 15px;*/
+    right: 1.2rem;
+    top: 1.8rem;
+    z-index: 2;
+    
+    /* non-critical apperance styles */
+    /*height: 30px;
+    width: 30px;*/
+    height: 20px;
+    width: 25px;
+    cursor: pointer;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect fill='#602480' width='30' height='6'/><rect fill='#602480' y='24' width='30' height='6'/><rect fill='#602480' y='12' width='30' height='6'/></svg>");
+    background-size: contain;
+  }
+  /*nav .nav-trigger + label, nav ul {
+    transition: left 0.2s;
+  }*/
+  /*.nav-trigger:checked {
+
+  }*/
+  /*.nav-trigger:checked ~ .main-content {
+    position: absolute;
+    left: 10px;
+  }*/
+  .nav-trigger:checked ~ ul {
+    /*position: absolute;
+    top: 0;
+    left: 10px;*/
+    /*display: block;
+    z-index: 1;*/
+    visibility: visible;
+    opacity: 1;
   }
 }
 
@@ -397,6 +479,7 @@ a:last-of-type.btn:hover {
 .main-content {
   font-weight: 300;
   font-size: 1rem;
+  background-color: #ffffff;
 }
 .main-content :first-child {
   margin-top: 0; }
@@ -523,6 +606,7 @@ a:last-of-type.btn:hover {
   .main-content {
     padding: 2rem 1rem;
     font-size: 1rem;
+    /*overflow-x: hidden;*/
   }
   .main-content p {
   margin-bottom: 1em;
