--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -186,6 +186,11 @@ nav h1 {
     overflow-x: hidden;
     max-width: 100%;
   }
+  nav a:hover, 
+  nav .dropdown-content li a:hover, 
+  nav .current .dropdown-content li a:hover {
+    border-bottom: none;
+  }
   nav ul {
     margin-top: 5rem;
     padding: 1.2rem;
@@ -199,7 +204,7 @@ nav h1 {
     width: 100%;
     height: 100%;
     text-align: center;
-    float: none;
+    /*float: none;*/
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.2s, opacity 0.2s linear;
@@ -218,10 +223,54 @@ display: flex;
 flex-direction: column;*/
   }
   nav ul li,
-  nav ul li .dropdown {
+  nav ul li.dropdown {
     display: block;
-    margin: 1rem auto;
+    margin: 0 auto;
+    border-bottom: solid 1px #eff0f1;
+    padding: 1rem 0;
   }
+  nav .current {
+    border-bottom: none;
+    background-color: #000099;
+  }
+  nav li.current a {
+    color: #ffffff;
+  }
+  nav li.dropdown.current {
+    margin: 0 auto;
+    color: #ffffff;
+  }
+  nav ul.dropdown-content {
+    visibility: visible;
+    z-index: 1;
+    position: relative;
+    display: block;
+    opacity: 1;
+    margin: 1rem auto;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    box-shadow: none;
+    background: #eff0f1;
+    text-align: center;
+  }
+  nav .dropdown-content li {
+    margin: 0 auto;
+    border-bottom: solid 1px #ffffff;
+  }
+  nav .dropdown-content li a, nav .current .dropdown-content li a {
+    border: none;
+    color: #000099;
+  }
+  nav .dropdown.current::after {
+    content: "";
+    display: inline-block;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid #ffffff;
+    margin: 2px 0px 2px 2px;
+  }
+
   nav img {
     max-width: 2.2rem;
   }
