--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -197,31 +197,25 @@ nav h1 {
     border-bottom: none;
   }
   nav ul {
-    margin-top: 5rem;
-    padding: 1.2rem;
+    /*display: none;*/
+    /*margin-top: 1rem;
+    padding: 1.2rem;*/
     /*padding-right: 1.2rem;*/
     /*display: none;*/
     /*z-index: -1;*/
     /*background-color: blue;*/
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 0;
     text-align: center;
     /*float: none;*/
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.2s, opacity 0.2s linear;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+3,0.95+57,0.3+79,0.1+99 */
-background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 3%, rgba(255,255,255,0.95) 57%, rgba(255,255,255,0.9) 79%, rgba(255,255,255,0.5) 90%, rgba(255,255,255,0.1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 3%,rgba(255,255,255,0.95) 57%,rgba(255,255,255,0.9) 79%,rgba(255,255,255,0.5) 90%,rgba(255,255,255,0.1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 3%,rgba(255,255,255,0.95) 57%,rgba(255,255,255,0.9) 79%,rgba(255,255,255,0.5) 90%,rgba(255,255,255,0.1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#1affffff',GradientType=0 ); /* IE6-9 */
--webkit-box-shadow: inset 0px 10px 5px -8px rgba(0,0,0,0.1);
--moz-box-shadow: inset 0px 10px 5px -8px rgba(0,0,0,0.1);
-box-shadow: inset 0px 10px 5px -8px rgba(0,0,0,0.1);
-z-index: 999;
+border-top: 1px solid #eff0f1;
+/*z-index: 999;*/
 /*display: -webkit-flex;
 display: flex;
 -webkit-flex-direction: column;
@@ -327,6 +321,10 @@ flex-direction: column;*/
     z-index: 1;*/
     visibility: visible;
     opacity: 1;
+    /*display: block;*/
+    height: 100%;
+    margin-top: 1rem;
+    padding: 1.2rem;
   }
 }
 
