--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -246,7 +246,7 @@ flex-direction: column;*/
     visibility: visible;
     z-index: 1;
     position: relative;
-    display: block;
+    display: none;
     opacity: 1;
     margin: 1rem auto;
     padding: 0;
@@ -272,6 +272,62 @@ flex-direction: column;*/
     border-top: 6px solid #ffffff;
     margin: 2px 0px 2px 2px;
   }
+ 
+
+#dropdown-trigger {
+    display: block;
+    /* critical styles - hide the checkbox input */
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+  }
+  label[for="dropdown-trigger"] {
+    /* critical positioning styles */
+    position: relative;
+    /*right: 15px; top: 15px;*/
+    /*right: 1.2rem;
+    top: 1.8rem;
+    z-index: 2;*/
+    
+    /* non-critical apperance styles */
+    /*height: 30px;
+    width: 30px;*/
+    /*height: 20px;
+    width: 25px;
+    cursor: pointer;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect fill='#602480' width='30' height='6'/><rect fill='#602480' y='24' width='30' height='6'/><rect fill='#602480' y='12' width='30' height='6'/></svg>");
+    background-size: contain;*/
+  }
+  /*nav .nav-trigger + label, nav ul {
+    transition: left 0.2s;
+  }*/
+  /*.nav-trigger:checked {
+
+  }*/
+  /*.nav-trigger:checked ~ .main-content {
+    position: absolute;
+    left: 10px;
+  }*/
+  #dropdown-trigger:checked + label[for="dropdown-trigger"] > li.dropdown > ul.dropdown-content {
+    display: block;
+    /*position: absolute;
+    top: 0;
+    left: 10px;*/
+    /*display: block;
+    z-index: 1;*/
+    /*height: 100%;
+    margin-top: 1rem;
+    padding: 1.2rem;
+    visibility: visible;
+    opacity: 1;*/
+    /*display: block;*/
+    
+  }
+  /*#dropdown-trigger:not(:checked) ~ li.dropdown > ul.dropdown-content {
+    display: none;
+  }*/
+  nav .dropdown:hover .dropdown-content {
+    display: none;
+}
 
   nav img {
     max-width: 2.2rem;
