--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -105,9 +105,8 @@ nav .dropdown-content {
   width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px 12px 4px;
-  z-index: 1;
+  z-index: 99;
   text-align: left;
-  /*line-height: 2rem;*/
 }
 
 nav .dropdown-content li {
@@ -125,6 +124,7 @@ nav .current .dropdown-content li a:hover {
   border-bottom: 1px solid #000099;
 }
 
+/*Dropdown trigger for mobile*/
 #dropdown-trigger {
     display: block;
     /* critical styles - hide the checkbox input */
@@ -205,31 +205,25 @@ nav h1 {
   nav .current .dropdown-content li a:hover {
     border-bottom: none;
   }
+  nav img {
+    max-width: 2.2rem;
+  }
+  nav h1 {
+    font-size: 1rem;
+    margin-left: 3.2rem;
+    line-height: 1.2rem;
+  }
   nav ul {
     visibility: hidden;
     opacity: 0;
-    /*display: none;*/
-    /*margin-top: 1rem;
-    padding: 1.2rem;*/
-    /*padding-right: 1.2rem;*/
-    /*display: none;*/
-    /*z-index: -1;*/
-    /*background-color: blue;*/
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 0;
-    text-align: center;
-    /*float: none;*/
-    
+    text-align: center;   
     transition: margin-top 0.2s, padding 0.2s, visibility 0.15s, opacity 0.18s, height 0.2s linear;
-border-top: 1px solid #eff0f1;
-/*z-index: 999;*/
-/*display: -webkit-flex;
-display: flex;
--webkit-flex-direction: column;
-flex-direction: column;*/
+    border-top: 1px solid #eff0f1;
   }
   nav ul li,
   nav ul li.dropdown {
@@ -280,66 +274,22 @@ flex-direction: column;*/
     margin: 2px 0px 2px 2px;
   }
  
-
+  /*Dropdown trigger for mobile stuff*/
   label[for="dropdown-trigger"] {
     /* critical positioning styles */
     position: relative;
-    /*right: 15px; top: 15px;*/
-    /*right: 1.2rem;
-    top: 1.8rem;
-    z-index: 2;*/
-    
-    /* non-critical apperance styles */
-    /*height: 30px;
-    width: 30px;*/
-    /*height: 20px;
-    width: 25px;
-    cursor: pointer;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect fill='#602480' width='30' height='6'/><rect fill='#602480' y='24' width='30' height='6'/><rect fill='#602480' y='12' width='30' height='6'/></svg>");
-    background-size: contain;*/
   }
-  /*nav .nav-trigger + label, nav ul {
-    transition: left 0.2s;
-  }*/
-  /*.nav-trigger:checked {
-
-  }*/
-  /*.nav-trigger:checked ~ .main-content {
-    position: absolute;
-    left: 10px;
-  }*/
   #dropdown-trigger:checked + label[for="dropdown-trigger"] > li.dropdown > ul.dropdown-content {
-    display: block;
-    /*position: absolute;
-    top: 0;
-    left: 10px;*/
-    /*display: block;
-    z-index: 1;*/
-    /*height: 100%;
-    margin-top: 1rem;
-    padding: 1.2rem;
-    visibility: visible;
-    opacity: 1;*/
-    /*display: block;*/
-    
+    display: block;    
   }
-  /*#dropdown-trigger:not(:checked) ~ li.dropdown > ul.dropdown-content {
-    display: none;
-  }*/
+  /*Mobile fix for dropdown menu triggered by checkbox, by removing this it will always stay visibile after first trigger*/
   nav .dropdown:hover .dropdown-content {
     display: none;
-}
-
-  nav img {
-    max-width: 2.2rem;
-  }
-  nav h1 {
-    font-size: 1rem;
-    margin-left: 3.2rem;
-    line-height: 1.2rem;
   }
 
+  
 
+  /*Hamburger button stuff*/
   .nav-trigger {
     display: block;
     /* critical styles - hide the checkbox input */
@@ -349,43 +299,23 @@ flex-direction: column;*/
   label[for="nav-trigger"] {
     /* critical positioning styles */
     position: absolute;
-    /*right: 15px; top: 15px;*/
     right: 1.2rem;
     top: 1.8rem;
     z-index: 2;
     
     /* non-critical apperance styles */
-    /*height: 30px;
-    width: 30px;*/
     height: 20px;
     width: 25px;
     cursor: pointer;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect fill='#602480' width='30' height='6'/><rect fill='#602480' y='24' width='30' height='6'/><rect fill='#602480' y='12' width='30' height='6'/></svg>");
     background-size: contain;
   }
-  /*nav .nav-trigger + label, nav ul {
-    transition: left 0.2s;
-  }*/
-  /*.nav-trigger:checked {
-
-  }*/
-  /*.nav-trigger:checked ~ .main-content {
-    position: absolute;
-    left: 10px;
-  }*/
   .nav-trigger:checked ~ ul {
-    /*position: absolute;
-    top: 0;
-    left: 10px;*/
-    /*display: block;
-    z-index: 1;*/
     height: 100%;
     margin-top: 1rem;
     padding: 1.2rem;
     visibility: visible;
     opacity: 1;
-    /*display: block;*/
-    
   }
 }
 
