--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,8 +3,8 @@ layout: default
 type: archive
 ---
 
-<div class="archive-description">
-  <h1 class="archive-title">{{ page.category }} Archive</h1>
+<div class="archive-description"> 
+  <h1 class="archive-title">Archivio delle news nella categoria <em>"{{ page.category }}"</em></h1>
   {{ content }}
 </div>
 
@@ -15,15 +15,25 @@ type: archive
       {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
       {% unless year == this_year %}
         {% assign year = this_year %}
-        <p>{{ year }}</p>
+        <h3>Anno {{ year }}</h3>
       {% endunless %}
       <article>
-        <h3><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>
+        <span>» </span>
         <time>
+          <span class="year">{{ post.date | date: "%Y" }}-</span>
+          <span class="month">{{ post.date | date: "%m" }}-</span>
+          <span class="day">{{ post.date | date: "%d" }}</span>
+        </time>
+        <span> | </span>
+        <h3><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>
+        <!-- {{ post.excerpt }} -->
+        <!-- <time>
+          <span>» </span>
           <span class="month">{{ post.date | date: "%b" }}</span>
           <span class="day">{{ post.date | date: "%d" }}</span>
           <span class="year">{{ post.date | date: "%Y" }}</span>
-        </time>
+        </time> -->
+        
       </article>
     {% endfor %}
   </div>
