--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,15 +4,18 @@ layout: default
 
 ---
 
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
-<p class="category">filed under:
-    {% for category in page.categories %}
-        <a href="{{site.baseurl}}/category/{{category}}" class="post-tag">
-            {{ category }}
-        </a>
-    {% endfor %}
-</p>
+<div class="post-header">
+  <h1>{{ page.title }}</h1>
+  <span class="meta">{{ page.date | date_to_string }}</span>
+  <span style="margin: 0 .5rem;">|</span>
+  <span class="category">category:
+      {% for category in page.categories %}
+          <a href="{{site.baseurl}}/category/{{category}}" class="post-tag">
+              {{ category }}
+          </a>
+      {% endfor %}
+  </span>
+</div>
 
 <img src="{{ page.image }}">
 
