--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -850,11 +850,14 @@ p.atom {
   float: right;
 }
 ul.posts {
-  margin: 5rem 0 0;
+  margin: 3rem 0 0;
   padding: 0;
   list-style-type: none;
   clear: both;
 }
+/*ul.posts h2:first-letter {
+  text-transform: capitalize;
+}*/
 ul.posts li {
   margin-bottom: 3rem;
   padding-bottom: 3rem;
