fix topics layout

--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -3,20 +3,23 @@
   <a href="{{ site.baseurl }}/pages/chiamata">
     <img src="{{ site.baseurl }}/assets/images/device-custom.png">
     <h3>La chiamata</h3>
-    <p>Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
+    <p style="color: #606c71;">Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
+    <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a>
   </a>
 </div>
 <div class="column topics">
   <a href="{{ site.baseurl }}/pages/procedura">
     <img src="{{ site.baseurl }}/assets/images/procedura.png">
     <h3>La procedura</h3>
-    <p>Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
+    <p style="color: #606c71;">Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
+    <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a>
   </a>
 </div>
 <div class="column topics">
   <a href="{{ site.baseurl }}/pages/comunicazione">
     <img src="{{ site.baseurl }}/assets/images/sticker.png">
     <h3>La comunicazione</h3>
-    <p>Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
+    <p style="color: #606c71;">Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
+    <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a>
   </a>
 </div>
