--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,15 @@
 <!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
 
 <footer class="site-footer">
-  <span class="site-footer-owner">
-    <a href="https://github.com/opencarecc/MicroWebsiteTemplate">open rampette</a> is maintained by 
-    <a href="https://github.com/opencarecc">opencarecc</a>.
-  </span>
+  <div class="column">
+    <span class="owner">
+      <a href="https://github.com/opencarecc/MicroWebsiteTemplate">open rampette</a> is maintained by 
+      <a href="https://github.com/opencarecc">opencarecc</a>.
+    </span>
 
-  <div>
-    <p class="site-footer-credits">This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670</p>
+      <p class="credits">This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670</p>
+  </div>
+  <div class="column">
     <img src="http://opencarecc.github.io/MicroWebsiteTemplate/assets/OC-EC-H2020.jpg">
   </div>
 </footer>
