--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@
   {% include head.html %}
 
   <body>
+    {% include return_to_top_button.html %}
     {% include navigation.html %}
 
     <section class="main-content">
@@ -14,12 +15,12 @@
         {% include disqus.html %}
       </div>
 
-
       {% include footer.html %}
     </section>
 
-    {% include ganalytics.html %}
     {% include jquery.html %}
+    {% include return_to_top.html %}
     {% include slick.html %}
+</script>
   </body>
 </html>
