fix broken links in topics

--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -4,7 +4,7 @@
     <img src="{{ site.baseurl }}/assets/images/device-custom.png">
     <h3>La chiamata</h3>
     <p style="color: #606c71;">Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
-    <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a>
+    <a href="{{ site.baseurl }}/pages/chiamata"><br><em>leggi tutto »</em></a>
   </a>
 </div>
 <div class="column topics">
@@ -12,7 +12,7 @@
     <img src="{{ site.baseurl }}/assets/images/procedura.png">
     <h3>La procedura</h3>
     <p style="color: #606c71;">Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
-    <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a>
+    <a href="{{ site.baseurl }}/pages/procedura"><br><em>leggi tutto »</em></a>
   </a>
 </div>
 <div class="column topics">
@@ -20,6 +20,6 @@
     <img src="{{ site.baseurl }}/assets/images/sticker.png">
     <h3>La comunicazione</h3>
     <p style="color: #606c71;">Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
-    <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a>
+    <a href="{{ site.baseurl }}/pages/comunicazione"><br><em>leggi tutto »</em></a>
   </a>
 </div>
