--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -662,14 +662,14 @@ a:last-of-type.btn:hover {
 @media screen and (min-width: 64em) {
   .main-content {
     max-width: 64rem;
-    padding: 2rem 6rem;
+    padding: 8rem 6rem 2rem;
     margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .main-content {
-    padding: 2rem 4rem;
+    padding: 8rem 4rem 2rem;
   }
   .main-content ul {
     padding-left: 20px;
@@ -678,7 +678,7 @@ a:last-of-type.btn:hover {
 
 @media screen and (max-width: 42em) {
   .main-content {
-    padding: 2rem 1rem;
+    padding: 7rem 1rem 2rem;
     font-size: 1rem;
     /*overflow-x: hidden;*/
   }
