add shrink effect to navbar after scroll

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,7 @@
 
     {% include jquery.html %}
     {% include return_to_top.html %}
+    {% include nav_shrink.html %}
     {% include slick.html %}
 </script>
   </body>
