--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 
     {% include jquery.html %}
     {% include return_to_top.html %}
+    {% include nav_shrink.html %}
     {% include slick.html %}
   </body>
 </html>
