remove return to top feature

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </section>
 
     {% include jquery.html %}
-    {% include return_to_top.html %}
+    <!-- {% include return_to_top.html %} -->
     {% include nav_shrink.html %}
     {% include slick.html %}
   </body>
