--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
     </section>
 
     {% include jquery.html %}
-    {% include return_to_top.html %}
+    <!-- {% include return_to_top.html %} -->
     {% include nav_shrink.html %}
     {% include slick.html %}
 </script>
