--- a/_layouts/projectPage.html
+++ b/_layouts/projectPage.html
@@ -67,7 +67,7 @@
   </section>
 
   {% include jquery.html %}
-  {% include return_to_top.html %}
+  <!-- {% include return_to_top.html %} -->
   {% include nav_shrink.html %}
   {% include slick.html %}
 </body>
