--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -51,6 +51,7 @@
                 {% endif %}
             {% endfor %}
                 
+            <!-- Language picker stuff-->
             {% for tongue in site.languages %}
                 <li>
                     <a {% if tongue == site.active_lang %}style="font-weight: bold;"{% endif %} href="{% if tongue == site.default_lang %} {{site.baseurl}}{{page.url}} {% else %} {{site.baseurl}}/{{ tongue }}{{page.url}} {% endif %}">{{ tongue }}</a>
