--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -1,25 +1,34 @@
 <!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
 <div class="column topics">
-  <a href="{{ site.baseurl }}/pages/chiamata">
+  <a href="{{ site.baseurl }}/chiamata">
     <img src="{{ site.baseurl }}/assets/images/device-custom.png">
-    <h3>La chiamata</h3>
-    <p style="color: #606c71;">Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
-    <a href="{{ site.baseurl }}/pages/chiamata"><br><em>leggi tutto »</em></a>
+    <!-- <h3>La chiamata</h3> -->
+    <h3>{{ site.data["lang"]["topics"]["title-1"] }}</h3>
+    <!-- <p style="color: #606c71;">Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p> -->
+    <p style="color: #606c71;">{{ site.data["lang"]["topics"]["description-1"] }}</p>
+    <!-- <a href="{{ site.baseurl }}/pages/chiamata"><br><em>leggi tutto »</em></a> -->
+    <a href="{{ site.baseurl }}/chiamata"><br><em>{{ site.data["lang"]["global"]["read-more"] }} &raquo;</em></a>
   </a>
 </div>
 <div class="column topics">
-  <a href="{{ site.baseurl }}/pages/procedura">
+  <a href="{{ site.baseurl }}/procedura">
     <img src="{{ site.baseurl }}/assets/images/procedura.png">
-    <h3>La procedura</h3>
-    <p style="color: #606c71;">Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
-    <a href="{{ site.baseurl }}/pages/procedura"><br><em>leggi tutto »</em></a>
+    <!-- <h3>La procedura</h3> -->
+    <h3>{{ site.data["lang"]["topics"]["title-2"] }}</h3>
+    <!-- <p style="color: #606c71;">Snelliamo la procedura di regolamentarizzazione dei commercianti</p> -->
+    <p style="color: #606c71;">{{ site.data["lang"]["topics"]["description-2"] }}</p>
+    <!-- <a href="{{ site.baseurl }}/pages/procedura"><br><em>leggi tutto »</em></a> -->
+    <a href="{{ site.baseurl }}/procedura"><br><em>{{ site.data["lang"]["global"]["read-more"] }} &raquo;</em></a>
   </a>
 </div>
 <div class="column topics">
-  <a href="{{ site.baseurl }}/pages/comunicazione">
+  <a href="{{ site.baseurl }}/comunicazione">
     <img src="{{ site.baseurl }}/assets/images/sticker.png">
-    <h3>La comunicazione</h3>
-    <p style="color: #606c71;">Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
-    <a href="{{ site.baseurl }}/pages/comunicazione"><br><em>leggi tutto »</em></a>
+    <!-- <h3>La comunicazione</h3> -->
+    <h3>{{ site.data["lang"]["topics"]["title-3"] }}</h3>
+    <!-- <p style="color: #606c71;">Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p> -->
+    <p style="color: #606c71;">{{ site.data["lang"]["topics"]["description-3"] }}</p>
+    <!-- <a href="{{ site.baseurl }}/pages/comunicazione"><br><em>leggi tutto »</em></a> -->
+    <a href="{{ site.baseurl }}/comunicazione"><br><em>{{ site.data["lang"]["global"]["read-more"] }} &raquo;</em></a>
   </a>
 </div>
